syntax = "proto3";
package raft;


option go_package = "raft";

service Raft {
    rpc AppendEntry(AppendEntryArg) returns (AppendEntryReply) {}
    rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply) {}
}

message AppendEntryArg {
    int32 Term = 1;
    string LeaderId = 2;

    int32 PreLogIndex = 3;
    int32 PreLogTerm = 4;

    repeated LogEntry Entries = 5;
    int32 LeaderCommit = 6;

}

message AppendEntryReply {
    int32 Term = 1;
    bool Success = 2;
    int32 ConflictTerm = 3;
}

message RequestVoteArgs {
    int32 Term = 1;
    string CandidateId = 2;
    int32 LastLogIndex = 3;
    int32 LastLogTerm = 4; 
}

message RequestVoteReply {
    int32 Term = 1;
    bool VoteGranted = 2;
}

message Command {
    string Key = 1;
    string Value = 2;
    int64 Cid = 3;
    string Type = 4;
    int32 Seq = 5;
}

message LogEntry {
    Command Cmd = 1;
    int32 Term = 2;
    int32 Index = 3;
}